# Classification-with-Linear-Model

./: README.md
CPP/: Report.md
CPP/Classification/: CMakeLists.txt
CPP/Classification/dataset/: heart  heart-full  iris  newheart
CPP/Classification/include/: Classifier.h  DataTransformer.h  Dataset.h  LinearRegression.h  LogisticRegression.h
CPP/Classification/src/: Classifier.cpp  DataTransformer.cpp  Dataset.cpp  LinearRegression.cpp  LogisticRegression.cpp  main.cpp
CPP/Regression/: CMakeLists.txt
CPP/Regression/include/: Dataset.h  Input.h  LinearRegression.h
CPP/Regression/src/: Dataset.cpp  LinearRegression.cpp  main.cpp
Python/: Cancer_Logistic.ipynb  LogisticRegression-HeartDisease.ipynb  LogisticRegression.ipynb  example1.ipynb  example2.ipynb  iris_sklearn.ipynb
Python/.ipynb_checkpoints/: Cancer_Logistic-checkpoint.ipynb  IgnoreMe-checkpoint.ipynb
