CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(Classification)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

INCLUDE_DIRECTORIES(include)

AUX_SOURCE_DIRECTORY(src DIR_SRC)
ADD_EXECUTABLE(Classification ${DIR_SRC})

# ADD_DEFINITIONS(-D USE_LINEAR)
# ADD_DEFINITIONS(-D DATASET_IRIS)